# exam-system

./: Middleware.js  firebase.js  firebase_config.py  hash_tool.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js
frontend/: admin.html  admin_dashboard.html  dashboard.html  index.html  login.html  student.html  student_portal.html  take_exam.html
