[project]
name = "exam-system"
version = "1.0.0"
description = "JEE Mock CBT Portal"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "firebase-admin>=6.5.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "Pillow>=10.2.0",
]

[tool.setuptools]
py-modules = ["main"]

# Equivalent to your "scripts": {"start": "node server.js"}
[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000"
